RESOLVED FIXED46720
IDBRequest should not have a method called abort.
https://bugs.webkit.org/show_bug.cgi?id=46720
Summary IDBRequest should not have a method called abort.
Andrei Popescu
Reported 2010-09-28 06:50:58 PDT
IDBRequest should not have a method called abort.
Attachments
Patch (42.74 KB, patch)
2010-09-28 08:53 PDT, Andrei Popescu
jorlow: review+
Andrei Popescu
Comment 1 2010-09-28 08:53:26 PDT
Jeremy Orlow
Comment 2 2010-09-28 09:00:41 PDT
Comment on attachment 69057 [details] Patch r=me maybe mention in the CL that change is per a spec change?
Andrei Popescu
Comment 3 2010-09-28 11:28:43 PDT
Note You need to log in before you can comment on or make changes to this bug.