2010-09-28  Andrei Popescu  <andreip@google.com>

Reviewed by Jeremy Orlow.

        IDBRequest should not have a method called abort.
        https://bugs.webkit.org/show_bug.cgi?id=46720

        * storage/indexeddb/basics-expected.txt:
        * storage/indexeddb/database-basics-expected.txt:
        * storage/indexeddb/index-basics-expected.txt:
        * storage/indexeddb/index-cursor-expected.txt:
        * storage/indexeddb/objectstore-basics-expected.txt:
        * storage/indexeddb/objectstore-cursor-expected.txt:
        * storage/indexeddb/objectstore-removeobjectstore-expected.txt:
        * storage/indexeddb/open-cursor-expected.txt:
        * storage/indexeddb/resources/shared.js:
        (verifyEventCommon):
        (verifyResult):
        * storage/indexeddb/transaction-basics-expected.txt:
2010-09-28  Andrei Popescu  <andreip@google.com>

        Reviewed by Jeremy Orlow.

        IDBRequest should not have a method called abort.
        https://bugs.webkit.org/show_bug.cgi?id=46720

        IDBRequest::abort() was dropped from the spec following discussion in
        http://www.w3.org/Bugs/Public/show_bug.cgi?id=10165

        * storage/IDBRequest.cpp:
        (WebCore::IDBRequest::IDBRequest):
        (WebCore::IDBRequest::~IDBRequest):
        (WebCore::IDBRequest::resetReadyState):
        (WebCore::IDBRequest::timerFired):
        (WebCore::IDBRequest::scheduleEvent):
        * storage/IDBRequest.h:
        * storage/IDBRequest.idl:

Canonical link: https://commits.webkit.org/59233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68546 268f45cc-cd09-0410-ab3c-d52691b4dbfc