WebCore/storage/IDBRequest.cpp
@@ -51,7 +51,6 @@ IDBRequest::IDBRequest(ScriptExecutionContext* context, PassRefPtr<IDBAny> sourc
     , m_source(source)
     , m_transaction(transaction)
     , m_timer(this, &IDBRequest::timerFired)
-    , m_aborted(false)
     , m_readyState(LOADING)
 {
     if (transaction)
@@ -69,13 +68,10 @@ IDBRequest::~IDBRequest()
     // so having a non-zero pointer at IDBRequest destruction time shows that the events have not
     // yet fired and there is a transaction waiting to be notified. This is an error.
     ASSERT(!m_transaction);
-    abort();
 }
 
 bool IDBRequest::resetReadyState()
 {
-    if (m_aborted)
-        return false;
     ASSERT(m_readyState == DONE);
     m_readyState = LOADING;
     return true;
@@ -123,15 +119,6 @@ void IDBRequest::onSuccess(PassRefPtr<SerializedScriptValue> serializedScriptVal
     scheduleEvent(IDBAny::create(serializedScriptValue), 0);
 }
 
-void IDBRequest::abort()
-{
-    m_timer.stop();
-    m_aborted = true;
-    m_pendingEvents.clear();
-
-    // FIXME: This should cancel any pending work being done in the backend.
-}
-
 ScriptExecutionContext* IDBRequest::scriptExecutionContext() const
 {
     return ActiveDOMObject::scriptExecutionContext();
@@ -157,7 +144,6 @@ EventTargetData* IDBRequest::ensureEventTargetData()
 void IDBRequest::timerFired(Timer<IDBRequest>*)
 {
     ASSERT(m_selfRef);
-    ASSERT(!m_aborted);
     ASSERT(m_pendingEvents.size());
 
     // We need to keep self-referencing ourself, otherwise it's possible we'll be deleted.
@@ -189,9 +175,6 @@ void IDBRequest::scheduleEvent(PassRefPtr<IDBAny> result, PassRefPtr<IDBDatabase
 {
     ASSERT(m_readyState < DONE);
     ASSERT(!!m_selfRef == m_timer.isActive());
-
-    if (m_aborted)
-        return;
 
     PendingEvent pendingEvent;
     pendingEvent.m_result = result;
